# aoc-2024-rust

./: Cargo.toml
data/: day5.txt
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  main.rs
